<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/topLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:baselineAligned="false">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sensor_de_temperatura"
            android:textSize="30sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/centerLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/bottomLinearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topLinearLayout">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ProgressBar
                android:id="@+id/temperatureProgressBar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="74dp"
                android:layout_height="0dp"
                android:layout_marginTop="26dp"
                android:layout_marginStart="26dp"
                android:layout_marginBottom="24dp"
                android:max="50"
                app:layout_constraintBottom_toBottomOf="parent"
                android:progressDrawable="@drawable/ic_vertical_progress"
                app:layout_constraintStart_toStartOf="@+id/thermometerImageView"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/thermometerImageView"
                android:layout_width="180dp"
                android:layout_height="360dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:contentDescription="@string/all"
                app:srcCompat="@drawable/ic_thermometer" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/temperatureTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="sans-serif-light"
            android:gravity="center"
            android:text="@string/value_temperature"
            android:textColor="@color/black_900"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/bottomLinearLayout"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:gravity="end"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ToggleButton
            android:id="@+id/dht11ToggleButton"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:background="@drawable/ic_toggle_theme"
            android:text=""
            android:textOff="@string/led_off"
            android:textOn="@string/led_on"
            tools:ignore="TouchTargetSizeCheck" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>